.classpath 파일 깃 추가

--- a/day01-Hello/.gitignore
+++ b/day01-Hello/.gitignore
@@ -62,7 +62,7 @@ local.properties
 .worksheet
 
 # JDT-specific (Eclipse Java Development Tools)
-.classpath
+#.classpath
 
 # Annotation Processing
 .apt_generated
