--- a/day15-1Modifiers/.project
+++ b/day15-1Modifiers/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>day15-1Static</name>
+	<name>day15-1Modifiers</name>
 	<comment></comment>
 	<projects>
 	</projects>
