--- a/day17-API/.project
+++ b/day17-API/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>day17-1API</name>
+	<name>day17-API</name>
 	<comment></comment>
 	<projects>
 	</projects>
