--- a/day19-3.Book/.project
+++ b/day19-3.Book/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>day19-GenericDef</name>
+	<name>day19-3.Book</name>
 	<comment></comment>
 	<projects>
 	</projects>
