BookStore 에 Exception 적용 시작

--- a/day20-2.Book/.project
+++ b/day20-2.Book/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>day20-Exception</name>
+	<name>day20-2.Book</name>
 	<comment></comment>
 	<projects>
 	</projects>
