--- a/lab04-이름.Account/.project
+++ b/lab04-이름.Account/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>day27-이름.ProductLab</name>
+	<name>lab04-이름.Account</name>
 	<comment></comment>
 	<projects>
 	</projects>
